little changes on details...

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <div id="blogs"></div>
       </div>
       <div id="footer">
-        <a href="https://noctus.dev" target="_blank"><i class="fa-solid fa-globe"></i> Noctus</a>
+        <a href="https://noctus.dev" target="_blank">Made by Noctus 🌙</a>
       </div>
     </div>
     <script type="text/javascript">
