--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                 <span style="display:none;"><i class="fas fa-envelope"></i> &nbsp; null</span>
                 <span style="display:block;"><i class="fas fa-link"></i> &nbsp; <a href="noctus.dev">noctus.dev</a></span>
                 <span style="display:block;"><i class="fas fa-map-marker-alt"></i> &nbsp;&nbsp; Turkey</span>
+                <span style="display:block;"><i class="fas fa-envelope"></i> &nbsp; <a href="mailto:info@noctus.dev">Contact Me!</a></span>
                 <span style="display:none;"><i class="fas fa-user-tie"></i> &nbsp;&nbsp; Available for hire</span>
                 <div class="socials">
                 <span style="display:inline !important;"><a href="https://www.twitter.com/NoctusDark" target="_blank" class="socials"><i class="fab fa-twitter"></i></a></span>
