some little changes on homepage & contact sub-directories added.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div id="spinner"></div>
     </div>
     <div id="profile">
-      <div id="profile_img" style="background: url(./images/default.jpg) center;"></div>
+      <div id="profile_img" style="background: url(./images/default.jpg) center;" draggable="false"></div>
       <div id="username"><span style="display:block;">Dark</span><a href="https://github.com/DarkIsTaken">@DarkIsTaken</a></div>
       <div id="userbio" style="display: block;">16-year-old self-taught fullstack developer &amp; student. I develop web &amp; mobile applications.</div>
       <div id="about">
