--- a/404.html
+++ b/404.html
@@ -5,15 +5,34 @@
         * {
             text-decoration: none;
             box-sizing: border-box;
+            padding: 0;
             font-family: sans-serif;
+            color: #fff;
+        }
+        
+        body {
+          background-color: #000;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+        }
+
+        a {
+          color: aqua;
+          font-size: 20px;
+          font-weight: bold;
+        }
+
+        a:hover {
+          color: red;
         }
     </style>
   </head>
   <body>
     <div style="text-align:center">
-  
-  <h1> This page does not exist. </h1>
-  <a href="./index.html" style="font-size: 20px; font-weight: bold;">Click here to go back!</a>
+        <img src="./images/404.png" alt="404">
+      <h1> This page does not exist. </h1>
+     <a href="./index.html">Click here to go back!</a>
   
     </div>
   </body>
