--- a/404.html
+++ b/404.html
@@ -30,7 +30,7 @@
   </head>
   <body>
     <div style="text-align:center">
-        <img src="./images/404.png" alt="404">
+        <img src="./images/404.png" alt="404" draggable="false">
       <h1> This page does not exist. </h1>
      <a href="./index.html">Click here to go back!</a>
   
