--- a/404.html
+++ b/404.html
@@ -1,39 +1,1 @@
-<html>
-  <head>
-    <title>Page Not Found</title>
-    <style>
-        * {
-            text-decoration: none;
-            box-sizing: border-box;
-            padding: 0;
-            font-family: sans-serif;
-            color: #fff;
-        }
-        
-        body {
-          background-color: #000;
-          display: flex;
-          align-items: center;
-          justify-content: center;
-        }
-
-        a {
-          color: aqua;
-          font-size: 20px;
-          font-weight: bold;
-        }
-
-        a:hover {
-          color: red;
-        }
-    </style>
-  </head>
-  <body>
-    <div style="text-align:center">
-        <img src="./images/404.png" alt="404" draggable="false">
-      <h1> This page does not exist. </h1>
-     <a href="./">Click here to go back!</a>
-  
-    </div>
-  </body>
-</html>
+<script>location.href="./"</script>
