--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/magic-grid/dist/magic-grid.min.js"></script>
     <link rel="stylesheet" href="index.css">
-  <link rel="icon" href="./images/noctus.jpeg" type="image/png"></head>
+    <link rel="icon" href="./images/noctus.jpeg" type="image/png"></head>
 
   <body>
     <div id="loading">
@@ -21,7 +21,7 @@
       <div id="about">
                 <span style="display:none;"><i class="fas fa-users"></i> &nbsp; null</span>
                 <span style="display:none;"><i class="fas fa-envelope"></i> &nbsp; null</span>
-                <span style="display:block;"><i class="fas fa-link"></i> &nbsp; <a href="noctus.dev">noctus.dev</a></span>
+                <span style="display:block;"><i class="fas fa-link"></i> &nbsp; <a href="https://noctus.dev">noctus.dev</a></span>
                 <span style="display:block;"><i class="fas fa-map-marker-alt"></i> &nbsp;&nbsp; Turkey</span>
                 <span style="display:block;"><i class="fas fa-envelope"></i> &nbsp; <a href="mailto:info@noctus.dev">Contact Me!</a></span>
                 <span style="display:none;"><i class="fas fa-user-tie"></i> &nbsp;&nbsp; Available for hire</span>
