contact links updated

--- a/index.html
+++ b/index.html
@@ -29,8 +29,10 @@
                 <span style="display:inline !important;"><a href="https://www.twitter.com/NoctusDark" target="_blank" class="socials"><i class="fab fa-twitter"></i></a></span>
                 <span style="display:inline !important;"><a href="https://discord.com/users/436210128879091732" target="_blank" class="socials"><i class="fab fa-discord"></i></a></span>
                 <span style="display:inline !important;"><a href="https://www.github.com/DarkIsTaken" target="_blank" class="socials"><i class="fab fa-github"></i></a></span>
+                <span style="display:inline !important;"><a href="https://www.gitlab.com/DarkIsTaken" target="_blank" class="socials"><i class="fab fa-gitlab"></i></a></span>
                 <span style="display:inline !important;"><a href="https://open.spotify.com/user/31qyxpn6tptgxjg3kukxautk7y7a" target="_blank" class="socials"><i class="fab fa-spotify"></i></a></span>
                 <span style="display:inline !important;"><a href="https://www.youtube.com/@NoctusDark/" target="_blank" class="socials"><i class="fab fa-youtube"></i></a></span>
+                <span style="display:inline !important;"><a href="https://www.patreon.com/noctus/" target="_blank" class="socials"><i class="fab fa-patreon"></i></a></span>
                 </div>
                 </div>
     </div>
