--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </div>
     <div id="profile">
       <div id="profile_img" style="background: url(./images/default.jpg) center;" draggable="false"></div>
-      <div id="username"><span style="display:block;">Dark</span><a href="https://github.com/DarkIsTaken">@DarkIsTaken</a></div>
+      <div id="username"><span style="display:block;"><a href="https://g.dev/erensarioglu"><i class="fas fa-code" style="font-size: 26px;"></i> Dark</a></span><a href="https://github.com/DarkIsTaken">@DarkIsTaken</a></div>
       <div id="userbio" style="display: block;">16-year-old self-taught fullstack developer &amp; student. I develop web &amp; mobile applications.</div>
       <div id="about">
                 <span style="display:none;"><i class="fas fa-users"></i> &nbsp; null</span>
