contact links updated

--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
                 <span style="display:inline !important;"><a href="https://open.spotify.com/user/31qyxpn6tptgxjg3kukxautk7y7a" target="_blank" class="socials"><i class="fab fa-spotify"></i></a></span>
                 <span style="display:inline !important;"><a href="https://www.youtube.com/@NoctusDark/" target="_blank" class="socials"><i class="fab fa-youtube"></i></a></span>
                 <span style="display:inline !important;"><a href="https://www.patreon.com/noctus/" target="_blank" class="socials"><i class="fab fa-patreon"></i></a></span>
+                <span style="display:inline !important;"><a href="https://www.ko-fi.com/noctusdark/" target="_blank" class="socials"><i class="fas fa-mug-hot"></i></a></span>
+                <span style="display:inline !important;"><a href="https://www.keybase.io/noctusdark/" target="_blank" class="socials"><i class="fab fa-keybase"></i></a></span>
                 </div>
                 </div>
     </div>
